Moving from CodePen to GitHub

--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 /* My Styles */
 
 body {
-    background-color: steelblue;
+  display: grid;
+  background-color: lightsteelblue;
+  font-family: raleway, sans-serif;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  letter-spacing: 0.25rem;
+}
+
+.rotate {
+  animation: rotation 10s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
